--- a/base.cfg
+++ b/base.cfg
@@ -34,6 +34,7 @@ parts =
     shredder
 eggs =
     chaussette
+    ExtendedJournalHandler
     request_id_middleware
     server_cookie_middleware
     ${:package-name}
@@ -56,7 +57,7 @@ openprocurement.tender.openeu = git ${remotes:gh}openprocurement/openprocurement
 openprocurement.contracting.api = git ${remotes:gh}openprocurement/openprocurement.contracting.api.git pushurl=${remotes:gh_push}openprocurement/openprocurement.contracting.api.git
 openprocurement.litepublic = git ${remotes:gh}Leits/openprocurement.litepublic.git pushurl=${remotes:gh_push}Leits/openprocurement.litepublic.git
 openprocurement.auctions.core = git ${remotes:gh}openprocurement/openprocurement.auctions.core.git pushurl=${remotes:gh_push}openprocurement/openprocurement.auctions.core.git
-openprocurement_client = git ${remotes:gh}Leits/openprocurement.client.python.git pushurl=${remotes:gh_push}Leits/openprocurement.client.python.git branch=use_requests
+openprocurement_client = git ${remotes:gh}openprocurement/openprocurement.client.python.git pushurl=${remotes:gh_push}openprocurement/openprocurement.client.python.git branch=use_requests
 
 [config-from-template]
 recipe = collective.recipe.template[genshi]:genshi
@@ -154,6 +155,7 @@ exc_logger = 1
 [litepublic_data_bridge]
 recipe = zc.recipe.egg
 eggs =
+    ${buildout:eggs}
     openprocurement.litepublic
 scripts = litepublic_data_bridge
 
