--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,3 +4,18 @@ extends = development.cfg
 # chronograph
 [openprocurement.api.ini]
 couchdb_db = test
+
+[couchdb.ini]
+username =
+password =
+reader_username = reader_username
+reader_password = reader_username
+
+[circus.ini]
+couchdb =True
+webapp =
+litepublic = True
+litepublic_data_bridge = True
+contracting_data_bridge =
+chronograph =
+concord =
