--- a/versions.cfg
+++ b/versions.cfg
@@ -407,4 +407,10 @@ cffi = 1.4.1
 
 # Required by:
 # openprocurement.litepublic==1.0.0
-openprocurement-client = 1.0b3
+openprocurement_client = 2.0b3
+
+# Added by buildout at 2016-10-06 15:50:16.405376
+
+# Required by:
+# openprocurement.api==2.3.23
+libnacl = 1.5.0
