--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,6 +14,7 @@ reader_password = reader_username
 [circus.ini]
 couchdb =True
 webapp =
+web_port = 10001
 litepublic = True
 litepublic_data_bridge = True
 contracting_data_bridge =
