--- a/templates/openprocurement.litepublic.ini
+++ b/templates/openprocurement.litepublic.ini
@@ -53,7 +53,7 @@ cookie_name = SERVER_ID
 [server:main]
 use = egg:chaussette
 host = 0.0.0.0
-port = 6543
+port = ${parts['circus.ini'].web_port}
 backend = gevent
 
 # Begin logging configuration
