--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
 extends = development.cfg
+eggs += mock
 
 # chronograph
 [openprocurement.api.ini]
@@ -19,3 +20,6 @@ edge_data_bridge = True
 contracting_data_bridge =
 chronograph =
 concord =
+
+[versions]
+mock = 1.0.1
