Ideal data bridge initial commit

--- a/versions.cfg
+++ b/versions.cfg
@@ -417,3 +417,9 @@ libnacl = 1.5.0
 
 # Added by buildout at 2016-10-13 05:00:13.379085
 redis = 2.10.5
+
+# Added by buildout at 2016-11-23 12:49:22.005810
+
+# Required by:
+# openprocurement-client==2.0b3
+python-magic = 0.4.12
