--- a/base.cfg
+++ b/base.cfg
@@ -169,6 +169,16 @@ down_requests_sleep = 5
 up_requests_sleep = 1
 up_wait_sleep = 30
 queue_size = 101
+api_clients_count = 3
+workers_count = 3
+retry_workers_count = 2
+filter_workers_count = 1
+retry_default_timeout = 5
+worker_sleep = 5
+watch_interval = 10
+retries_count = 10
+queue_timeout = 5
+resource = plans
 
 [chronograph.ini]
 <= config-from-template
