Based on release packages

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ extends = development.cfg journal.cfg
 [openprocurement.edge.ini]
 resources = tenders,plans,contracts,auctions
 api_version = 2.3
-couchdb_db = public_edge_db
+couchdb_db = pb_sandbox
 logs_db = logs_db_test
 
 [circus.ini]
@@ -33,4 +33,5 @@ reader_username = reader_username
 reader_password = reader_username
 
 [edge_data_bridge_defaults]
+user_agent = phalanx
 resources_api_server =
