Update buildout config

--- a/profiles/preview.cfg
+++ b/profiles/preview.cfg
@@ -1,5 +1,8 @@
 [buildout]
-extends = base.cfg journal.cfg versions.cfg
+extends =
+    base.cfg
+    journal.cfg
+    versions.cfg
 parts +=
     logrotate.conf
     logrotate-hourly
