--- a/profiles/development.cfg
+++ b/profiles/development.cfg
@@ -1,8 +1,11 @@
 [buildout]
-extends = base.cfg versions.cfg
+extends =
+    base.cfg
+    sources.cfg
+    versions.cfg
 parts += docs
 show-picked-versions = true
-update-versions-file = versions.cfg
+update-versions-file = profiles/versions.cfg
 
 [scripts]
 eggs +=
@@ -31,4 +34,3 @@ eggs =
     sphinxcontrib-httpdomain
 source =
     ${buildout:directory}/src/openprocurement.api/docs/source
-
