--- a/profiles/sources.cfg
+++ b/profiles/sources.cfg
@@ -8,5 +8,6 @@ opgh = ${remotes:gh}openprocurement/openprocurement
 opgh_push = ${remotes:gh_push}openprocurement/openprocurement
 
 [sources]
+statsdhandler = git ${remotes:gh}openprocurement/statsdhandler.git pushurl=${remotes:gh_push}openprocurement/statsdhandler.git
 openprocurement.edge = git ${remotes:opgh}.edge.git pushurl=${remotes:opgh}.edge.git branch=master
 openprocurement_client = git ${remotes:opgh}.client.python.git pushurl=${remotes:opgh_push}.client.python.git branch=use_requests
