--- a/profiles/versions.cfg
+++ b/profiles/versions.cfg
@@ -161,3 +161,9 @@ tornado = 4.4.2
 # Required by:
 # openprocurement.edge==1.0.0dev4
 tzlocal = 1.3
+
+# Added by buildout at 2017-04-25 15:41:25.145429
+
+# Required by:
+# StatsdHandler==0.0.1dev-r0
+python-statsd = 2.0.0
