Support Netdata Statsd via statsdhandler config

--- a/profiles/statsd_auctions.cfg
+++ b/profiles/statsd_auctions.cfg
@@ -1,7 +1,7 @@
 [buildout]
 parts +=
     edge_data_bridge_auctions.yaml
-    statsite_auctions_handler.yaml
+    statsd_auctions_handler.yaml
 
 [circus.ini]
 edge_data_bridge_auctions = True
@@ -10,8 +10,8 @@ edge_data_bridge_auctions = True
 <= edge_data_bridge_defaults
 resources = auctions
 statsdhandler = 1
-handler_config_path = ${buildout:directory}/etc/statsite_${:resources}_handler.yaml
+handler_config_path = ${buildout:directory}/etc/statsd_${:resources}_handler.yaml
 
-[statsite_auctions_handler.yaml]
-<= statsite_handler_defaults
+[statsd_auctions_handler.yaml]
+<= statsd_handler_defaults
 app_key = edge_auctions
