--- a/profiles/statsd_tenders.cfg
+++ b/profiles/statsd_tenders.cfg
@@ -1,7 +1,7 @@
 [buildout]
 parts +=
     edge_data_bridge_tenders.yaml
-    statsite_tenders_handler.yaml
+    statsd_tenders_handler.yaml
 
 [circus.ini]
 edge_data_bridge_tenders = True
@@ -10,8 +10,8 @@ edge_data_bridge_tenders = True
 <= edge_data_bridge_defaults
 resources = tenders
 statsdhandler = 1
-handler_config_path = ${buildout:directory}/etc/statsite_${:resources}_handler.yaml
+handler_config_path = ${buildout:directory}/etc/statsd_${:resources}_handler.yaml
 
-[statsite_tenders_handler.yaml]
-<= statsite_handler_defaults
+[statsd_tenders_handler.yaml]
+<= statsd_handler_defaults
 app_key = edge_tenders
