--- a/buildout.cfg.example
+++ b/buildout.cfg.example
@@ -7,12 +7,12 @@ extends =
 user_agent = edge
 resources_api_server = http://public.api-sandbox.openprocurement.org
 
-#Example with Statsite Handler
+#Example with statsd Handler
 [buildout]
 extends =
     profiles/production.cfg
-    profiles/statsite.cfg
-    profiles/statsite_tenders.cfg
+    profiles/statsd.cfg
+    profiles/statsd_tenders.cfg
 
 [edge_data_bridge_defaults]
 user_agent = edge
