--- a/profiles/sources.cfg
+++ b/profiles/sources.cfg
@@ -9,5 +9,5 @@ opgh_push = ${remotes:gh_push}openprocurement/openprocurement
 
 [sources]
 statsdhandler = git ${remotes:gh}openprocurement/statsdhandler.git pushurl=${remotes:gh_push}openprocurement/statsdhandler.git
-openprocurement.edge = git ${remotes:opgh}.edge.git pushurl=${remotes:opgh}.edge.git branch=master
-openprocurement_client = git ${remotes:opgh}.client.python.git pushurl=${remotes:opgh_push}.client.python.git branch=use_requests
+openprocurement.edge = git ${remotes:gh}openprocurement/openprocurement.edge.git pushurl=${remotes:gh_push}openprocurement/openprocurement.edge.git
+openprocurement_client = git ${remotes:gh}openprocurement/openprocurement.client.python.git pushurl=${remotes:gh_push}openprocurement/openprocurement.client.python.git branch=use_requests
