--- a/profiles/statsd_contracts.cfg
+++ b/profiles/statsd_contracts.cfg
@@ -1,7 +1,7 @@
 [buildout]
 parts +=
     edge_data_bridge_contracts.yaml
-    statsite_contracts_handler.yaml
+    statsd_contracts_handler.yaml
 
 [circus.ini]
 edge_data_bridge_contracts = True
@@ -10,8 +10,8 @@ edge_data_bridge_contracts = True
 <= edge_data_bridge_defaults
 resources = contracts
 statsdhandler = 1
-handler_config_path = ${buildout:directory}/etc/statsite_${:resources}_handler.yaml
+handler_config_path = ${buildout:directory}/etc/statsd_${:resources}_handler.yaml
 
-[statsite_contracts_handler.yaml]
-<= statsite_handler_defaults
+[statsd_contracts_handler.yaml]
+<= statsd_handler_defaults
 app_key = edge_contracts
