--- a/profiles/statsd_plans.cfg
+++ b/profiles/statsd_plans.cfg
@@ -1,7 +1,7 @@
 [buildout]
 parts +=
     edge_data_bridge_plans.yaml
-    statsite_plans_handler.yaml
+    statsd_plans_handler.yaml
 
 [circus.ini]
 edge_data_bridge_plans = True
@@ -10,8 +10,8 @@ edge_data_bridge_plans = True
 <= edge_data_bridge_defaults
 resources = plans
 statsdhandler = 1
-handler_config_path = ${buildout:directory}/etc/statsite_${:resources}_handler.yaml
+handler_config_path = ${buildout:directory}/etc/statsd_${:resources}_handler.yaml
 
-[statsite_plans_handler.yaml]
-<= statsite_handler_defaults
+[statsd_plans_handler.yaml]
+<= statsd_handler_defaults
 app_key = edge_plans
