Add monitoring support

--- a/base.cfg
+++ b/base.cfg
@@ -31,6 +31,8 @@ parts =
     shredder
 eggs =
     chaussette
+    PasteDeploy
+    ZopeSkel
     request_id_middleware
     server_cookie_middleware
     ${:package-name}
