--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,16 @@
 [buildout]
-extends = development.cfg
+extends =
+    development.cfg
+    statsd.cfg
+
+[couchdb.ini]
+username =
+password =
+
+[circus.ini]
+webapp = True
+db =
 
 # chronograph
 [openprocurement.api.ini]
-couchdb_db = test
+couchdb_db = public_production_db
