--- a/versions.cfg
+++ b/versions.cfg
@@ -175,7 +175,7 @@ simplejson = 3.6.5
 # Required by:
 # WebTest==2.0.16
 # sphinxcontrib-httpdomain==1.3.0
-six = 1.9.0
+six = 1.10.0
 
 # Required by:
 # openprocurement.api==0.6
@@ -330,8 +330,8 @@ pycrypto = 2.6.1
 grequests = 0.2.0
 
 # Added by buildout at 2015-09-22 13:06:13.920992
-cffi = 1.2.1
-cryptography = 1.0.1
+cffi = 1.4.1
+cryptography = 1.2.3
 idna = 2.0
 pyOpenSSL = 0.15.1
 
@@ -408,3 +408,13 @@ openprocurement-client = 1.0b2
 # openprocurement.api==2.3.3
 # openprocurement.documentservice==1.0
 libnacl = 1.4.5
+
+# Added by buildout at 2017-05-19 11:12:18.024183
+redis = 2.10.5
+
+# Added by buildout at 2017-05-19 11:55:54.478973
+decorator = 4.0.11
+
+# Required by:
+# statsdhandler==0.0.1dev-r0
+datadog = 0.16.0
