Add chronograph handler conf

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,8 @@
 [buildout]
 extends =
     development.cfg
-    statsd.cfg
-
-[couchdb.ini]
-username =
-password =
-
-[circus.ini]
-webapp = True
-db =
+#    statsd.cfg
 
 # chronograph
 [openprocurement.api.ini]
-couchdb_db = public_production_db
+couchdb_db = test
