--- a/statsd.cfg
+++ b/statsd.cfg
@@ -4,7 +4,7 @@ package-name +=
     statsdhandler
 parts +=
     api_handler.yaml
-
+    chronograph_handler.yaml
 
 [sources]
 timingtween = git https://VDigitall@gitlab.quintagroup.com/VDigitall/pyramid-timing-tween.git
@@ -12,8 +12,17 @@ statsdhandler = git ${remotes:gh}openprocurement/statsdhandler.git push_url=${re
 
 [api_handler.yaml]
 <= config-from-template
+app_key = api_23
+
+[chronograph_handler.yaml]
+<= config-from-template
+app_key = chronograph
 
 [openprocurement.api.ini]
 statsd = 1
 do_timing = true
 handler_config = ${buildout:directory}/etc/api_handler.yaml
+
+[chronograph.ini]
+handler_config = ${buildout:directory}/etc/chronograph_handler.yaml
+statsd = 1
