--- a/templates/chronograph.ini
+++ b/templates/chronograph.ini
@@ -37,14 +37,21 @@ backend = gevent
 keys = root, openprocurement_chronograph, apscheduler, requests${',exc_logger' if 'exc_logger' in options else ''}
 
 [handlers]
-keys = console${',loggly' if 'loggly' in options else ''}${',journal' if 'journal' in options else ''}
+keys = console${',loggly' if 'loggly' in options else ''}${',journal' if 'journal' in options else ''}${',statsd' if 'statsd' in options else ''}
 
 [formatters]
 keys = generic
 
 [logger_root]
-level = INFO
-handlers = console${',loggly' if 'loggly' in options else ''}
+level = DEBUG
+handlers = console${',loggly' if 'loggly' in options else ''}${',statsd' if 'statsd' in options else ''}
+
+{% if 'statsd' in options %}\
+[handler_statsd]
+level = DEBUG
+class = statsdhandler.StatsdHandler
+args = ("${options['handler_config']}",)
+{% end %}\
 
 [logger_openprocurement_chronograph]
 level = DEBUG
