Add penstock configuration

--- a/statsd.cfg
+++ b/statsd.cfg
@@ -12,7 +12,7 @@ statsdhandler = git ${remotes:gh}openprocurement/statsdhandler.git push_url=${re
 
 [api_handler.yaml]
 <= config-from-template
-app_key = api_23
+app_key = api
 
 [chronograph_handler.yaml]
 <= config-from-template
