--- a/templates/penstock.yaml
+++ b/templates/penstock.yaml
@@ -12,7 +12,12 @@ handlers:
     level: INFO
     formatter: simple
     stream: ext://sys.stdout
-
+{% if 'statsd' in options %}\
+  statsd:
+    level: DEBUG
+    class: statsdhandler.StatsdHandler
+    config_path: "${options['handler_config']}"
+{% end %}
 loggers:
   replichecker:
     handlers: [console]
@@ -20,5 +25,5 @@ loggers:
     level: INFO
 
   "":
-    handlers: [console]
-    level: INFO
+    handlers: [console${',statsd' if 'statsd' in options else ''}]
+    level: DEBUG
