--- a/statsd.cfg
+++ b/statsd.cfg
@@ -5,24 +5,33 @@ package-name +=
 parts +=
     api_handler.yaml
     chronograph_handler.yaml
+    contracting_bridge_handler.yaml
 
 [sources]
 timingtween = git https://VDigitall@gitlab.quintagroup.com/VDigitall/pyramid-timing-tween.git
 statsdhandler = git ${remotes:gh}openprocurement/statsdhandler.git push_url=${remotes:gh_push}openprocurement/statsdhandler.git
-
-[api_handler.yaml]
-<= config-from-template
-app_key = api
-
-[chronograph_handler.yaml]
-<= config-from-template
-app_key = chronograph
 
 [openprocurement.api.ini]
 statsd = 1
 do_timing = true
 handler_config = ${buildout:directory}/etc/api_handler.yaml
 
+[api_handler.yaml]
+<= config-from-template
+app_key = api
+
 [chronograph.ini]
 handler_config = ${buildout:directory}/etc/chronograph_handler.yaml
 statsd = 1
+
+[chronograph_handler.yaml]
+<= config-from-template
+app_key = chronograph
+
+[contracting_data_bridge.yaml]
+statsd = 1
+handler_config = ${buildout:directory}/etc/contracting_bridge_handler.yaml
+
+[contracting_bridge_handler.yaml]
+<= config-from-template
+app_key = contracting_bridge
