--- a/templates/contracting_data_bridge.yaml
+++ b/templates/contracting_data_bridge.yaml
@@ -17,7 +17,12 @@ handlers:
     level: INFO
     formatter: simple
     stream: ext://sys.stdout
-
+{% if 'statsd' in options %}\
+  statsd:
+    level: DEBUG
+    class: statsdhandler.StatsdHandler
+    config_path: "${options['handler_config']}"
+{% end %}
   journal:
     class: ExtendedJournalHandler.ExtendedJournalHandler
     level: INFO
@@ -27,11 +32,10 @@ handlers:
 
 loggers:
   openprocurement.contracting.api.databridge:
-    handlers: [console, journal]
+    handlers: [console, journal${',statsd' if 'statsd' in options else ''}]
     propagate: no
     level: DEBUG
 
   "":
     handlers: [console, journal]
     level: DEBUG
-
