--- a/statsd.cfg
+++ b/statsd.cfg
@@ -6,6 +6,7 @@ parts +=
     api_handler.yaml
     chronograph_handler.yaml
     contracting_bridge_handler.yaml
+    competitive_dialogue_bridge_handler.yaml
 
 [sources]
 timingtween = git https://VDigitall@gitlab.quintagroup.com/VDigitall/pyramid-timing-tween.git
@@ -28,6 +29,14 @@ statsd = 1
 <= config-from-template
 app_key = chronograph
 
+[contracting_data_bridge]
+eggs +=
+    statsdhandler
+
+[competitive_dialogue_data_bridge]
+eggs +=
+    statsdhandler
+
 [contracting_data_bridge.yaml]
 statsd = 1
 handler_config = ${buildout:directory}/etc/contracting_bridge_handler.yaml
@@ -35,3 +44,11 @@ handler_config = ${buildout:directory}/etc/contracting_bridge_handler.yaml
 [contracting_bridge_handler.yaml]
 <= config-from-template
 app_key = contracting_bridge
+
+[competitive_dialogue_data_bridge.yaml]
+statsd = 1
+handler_config = ${buildout:directory}/etc/competitive_dialogue_bridge_handler.yaml
+
+[competitive_dialogue_bridge_handler.yaml]
+<= config-from-template
+app_key = competitive_dialogue_bridge
