Replace timingtween to pyramidtiming

--- a/templates/openprocurement.api.ini
+++ b/templates/openprocurement.api.ini
@@ -16,7 +16,7 @@ pyramid.debug_routematch = false
 pyramid.debug_templates = ${options['debug']}
 pyramid.default_locale_name = en
 exclog.extra_info = true
-{% if 'do_timing' in options %}do_timing = ${options['do_timing']}{% end %}
+{% if 'pyramid_timing' in options %}pyramid_timing = ${options['pyramid_timing']}{% end %}
 {% if 'health_threshold' in options %}health_threshold = ${options['health_threshold']}{% end %}
 {% if 'update_after' in options %}update_after = ${options['update_after']}{% end %}
 {% if 'plugins' in options %}plugins = ${options['plugins']}{% end %}
