--- a/statsd.cfg
+++ b/statsd.cfg
@@ -1,15 +1,17 @@
 [buildout]
 package-name +=
-    timingtween
+    pyramidtiming
     statsdhandler
 parts +=
     api_handler.yaml
     chronograph_handler.yaml
     contracting_bridge_handler.yaml
     competitive_dialogue_bridge_handler.yaml
+eggs +=
+    pyramidtiming [pyramid]
 
 [sources]
-timingtween = git https://VDigitall@gitlab.quintagroup.com/VDigitall/pyramid-timing-tween.git
+pyramidtiming = git ${remotes:gh}openprocurement/pyramid-timing.git push_url=${remotes:gh_push}openprocurement/pyramid-timing.git
 statsdhandler = git ${remotes:gh}openprocurement/statsdhandler.git push_url=${remotes:gh_push}openprocurement/statsdhandler.git
 
 [openprocurement.api.ini]
