Added dump configuration with monitoring support

--- a/base.cfg
+++ b/base.cfg
@@ -9,6 +9,7 @@ parts =
     penstock_with_init
     api_backup
     api_backup_hourly
+    [dump.yaml]
 
 eggs =
     circus
@@ -85,6 +86,12 @@ command = /usr/sbin/logrotate --state ${buildout:directory}/var/logrotate.status
 <= config-from-template
 target-file = ${buildout:bin-directory}/${:_buildout_section_name_}
 target-executable = yes
+
+[dump.yaml]
+<= config-from-template
+cmd = dump
+db_url =
+dump_uri =
 
 [api_backup]
 recipe = collective.recipe.template
