Added monitoring support for penstock

--- a/base.cfg
+++ b/base.cfg
@@ -9,7 +9,7 @@ parts =
     penstock_with_init
     api_backup
     api_backup_hourly
-    [dump.yaml]
+    dump.yaml
 
 eggs =
     circus
@@ -98,7 +98,7 @@ recipe = collective.recipe.template
 inline =
     #!/bin/bash
     echo "----------------  Start  -----------------"
-    ${buildout:bin-directory}/python ${buildout:directory}/dump.py dump http://${project:couchdb_username}:${project:couchdb_password}@${project:couchdb_host}:${project:couchdb_port}/${project:couchdb_backup_db}  s3://${project:backup_aws_access_key}:${project:backup_aws_secret_key}@${project:backup_bucket}/${project:backup_dir}/${:_buildout_section_name_}_`date --iso-8601=minutes`.back
+    ${buildout:bin-directory}/python ${buildout:directory}/dump.py ${buildout:directory}/etc/dump.yaml
 
 output = ${buildout:bin-directory}/${:_buildout_section_name_}
 mode = 755
