--- a/templates/penstock.yaml
+++ b/templates/penstock.yaml
@@ -12,10 +12,15 @@ handlers:
     level: INFO
     formatter: simple
     stream: ext://sys.stdout
-
+{% if 'statsd' in parts['penstock.yaml'] %}
+  statsd:
+    level: DEBUG
+    class: statsdhandler.StatsdHandler
+    config_path: "{{handler_config}}"
+{% endif %}
 loggers:
   replichecker:
-    handlers: [console]
+    handlers: [console{% if 'statsd' in parts['penstock.yaml'] %},statsd{% endif %}]
     propagate: no
     level: INFO
 
