--- a/statsd.cfg
+++ b/statsd.cfg
@@ -3,9 +3,20 @@ package-name +=
   statsdhandler
 parts +=
   dump_handler.yaml
+  penstock_handler.yaml
+eggs +=
+  statsdhandler
 
 [sources]
 statsdhandler = git ${remotes:gh}openprocurement/statsdhandler.git push_url=${remotes:gh_push}openprocurement/statsdhandler.git
+
+[penstock_handler.yaml]
+<= config-from-template
+app_key = penstock
+
+[penstock.yaml]
+statsd = 1
+handler_config = ${buildout:directory}/etc/penstock_handler.yaml
 
 [dump.yaml]
 statsd = 1
