--- a/profiles/preview.cfg
+++ b/profiles/preview.cfg
@@ -1,5 +1,7 @@
 [buildout]
-extends = base.cfg versions.cfg
+extends =
+  base.cfg
+  versions.cfg
 parts +=
     logrotate.conf
     logrotate-hourly
