--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -75,8 +75,6 @@ logs_dir = ${project:logs_dir}
 aws_access_key = ${project:logs_aws_access_key}
 aws_secret_key =  ${project:logs_aws_secret_key}
 
-
-
 [logrotate-hourly]
 recipe = z3c.recipe.usercrontab
 times = @hourly
@@ -90,8 +88,8 @@ target-executable = yes
 [dump.yaml]
 <= config-from-template
 cmd = dump
-db_url =
-dump_uri =
+db_url = http://${project:couchdb_username}:${project:couchdb_password}@${project:couchdb_host}:${project:couchdb_port}/${project:couchdb_backup_db}
+dump_uri = s3://${project:backup_aws_access_key}:${project:backup_aws_secret_key}@${project:backup_bucket}/${project:backup_dir}/${:_buildout_section_name_}
 
 [api_backup]
 recipe = collective.recipe.template
@@ -102,9 +100,6 @@ inline =
 
 output = ${buildout:bin-directory}/${:_buildout_section_name_}
 mode = 755
-
-
-
 
 [api_backup_hourly]
 recipe = z3c.recipe.usercrontab
@@ -126,8 +121,6 @@ prefix =
       admin: http://${project:couchdb_admin_username}:${project:couchdb_admin_password}@${project:couchdb_host}:${project:couchdb_port}
       minimal_replications: 1
 
-
-
 [project]
 couchdb_port = 5984
 couchdb_host = 127.0.0.1
@@ -147,7 +140,6 @@ backup_bucket =
 backup_dir =
 backup_aws_access_key =
 backup_aws_secret_key =
-
 
 couchdb_remote_username = reader
 couchdb_remote_password = aaaaa
