Added statsd plugin to circus.ini template

--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -88,13 +88,15 @@ couchdb = True
 concord = True
 penstock =
 vaurien =
-statsd = True
+statsd = False
 webapp = True
 web_port = 6543
 web_host = 0.0.0.0
 endpoint = ipc://${buildout:directory}/var/circus_endpoint
 pubsub_endpoint = ipc://${buildout:directory}/var/circus_pubsub
 timezone = Europe/Kiev
+app_key = circus
+statsd_plugin = False
 
 [couchdb.ini]
 <= config-from-template
