--- a/profiles/statsd.cfg
+++ b/profiles/statsd.cfg
@@ -17,3 +17,6 @@ handler_config = ${buildout:directory}/etc/api_handler.yaml
 [api_handler.yaml]
 <= config-from-template
 app_key = api
+
+[circus.ini]
+statsd_plugin = True
