--- a/templates/circus.ini
+++ b/templates/circus.ini
@@ -39,6 +39,16 @@ watcher = db
 max_mem = 1700M
 {% end %}
 
+{% if options['statsd_plugin'] %}
+[plugin:statsd]
+use = circus.plugins.statsd.FullStats
+host = localhost
+port = 8125
+sample_rate = 1.0
+application_name = ${options['app_key']}
+{% end %}
+
+
 [plugin:db_http]
 use = circus.plugins.http_observer.HttpObserver
 restart_on_error = db
