--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -60,6 +60,7 @@ scripts = circusctl
 statsd = False
 endpoint = ipc://${buildout:directory}/var/circus_endpoint
 pubsub_endpoint = ipc://${buildout:directory}/var/circus_pubsub
+app_key = circus
 
 [couchdb.ini]
 <= config-from-template
