--- a/profiles/statsd.cfg
+++ b/profiles/statsd.cfg
@@ -6,6 +6,14 @@ parts +=
   penstock_handler.yaml
 eggs +=
   statsdhandler
+extensions = mr.developer
+auto-checkout = *
+
+[remotes]
+gh = https://github.com/
+gh_push = git@github.com:
+opgh = ${remotes:gh}openprocurement/openprocurement
+opgh_push = ${remotes:gh_push}openprocurement/openprocurement
 
 [sources]
 statsdhandler = git ${remotes:gh}openprocurement/statsdhandler.git push_url=${remotes:gh_push}openprocurement/statsdhandler.git
