--- a/templates/circus.ini
+++ b/templates/circus.ini
@@ -20,6 +20,14 @@ stderr_stream.backup_count = 1
 [env:db]
 HOME = {{ parts.buildout.directory }}/var
 
+{% if statsd == 'True' %}
+[plugin:statsd]
+use = circus.plugins.statsd.StatsdEmitter
+host = localhost
+port = 8125
+sample_rate = 1.0
+application_name = {{ app_key }}
+{% endif %}
 
 {% if parts.project.with_penstock %}
 [watcher:penstock]
