Update devel configuration with support system nginx

--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -3,6 +3,7 @@ package-name =
     openprocurement.edge
     openprocurement_client
 parts =
+    mkdirs
     autostart
     scripts
     couchpy
@@ -28,6 +29,13 @@ find-links =
 recipe = collective.recipe.template[genshi]:genshi
 input = ${buildout:directory}/templates/${:_buildout_section_name_}
 output = ${buildout:directory}/etc/${:_buildout_section_name_}
+
+[mkdirs]
+recipe =  z3c.recipe.mkdir
+paths =
+    ${buildout:directory}/var/log
+    ${buildout:directory}/var/couchdb
+    ${buildout:directory}/var/log/nginx
 
 [scripts]
 recipe = zc.recipe.egg
@@ -79,7 +87,7 @@ edge_data_bridge_tenders =
 statsd = True
 edge = True
 edge2 = True
-nginx = True
+nginx = False
 statsd = False
 migration_skip = True
 sandbox_mode = True
@@ -134,9 +142,10 @@ scripts = edge_data_bridge
 [edge_data_bridge_defaults]
 <= config-from-template
 input = ${buildout:directory}/templates/edge_data_bridge.yaml
-user_agent = edge.${:resources}
+resources =
 resources_api_server =
 resources_api_version = 2.3
+user_agent = edge.${:resources}
 couch_url = ${openprocurement.edge.ini:couchdb_url}
 public_db = ${openprocurement.edge.ini:couchdb_db}
 log_db_name = ${openprocurement.edge.ini:logs_db}
@@ -168,6 +177,26 @@ bulk_save_interval = 3
 bulk_query_interval = 3
 bulk_query_limit = 5000
 
+[config-from-template-jinja]
+recipe = sact.recipe.jinjatemplate
+template-file = templates/${:_buildout_section_name_}
+target-file = etc/${:_buildout_section_name_}
+
+[nginx.conf]
+<= config-from-template-jinja
+server_name = "edge"
+port = 8090
+static_path = static
+auctions =
+contracts =
+plans =
+tenders =
+couchdb_host = ${couchdb.ini:host}
+couchdb_port = ${couchdb.ini:port}
+couchdb_db = ${openprocurement.edge.ini:couchdb_db}
+edge_port = ${circus.ini:edge_port}
+api_version = ${edge_data_bridge_defaults:resources_api_version}
+
 [logrotate.conf]
 <= config-from-template
 
@@ -175,7 +204,6 @@ bulk_query_limit = 5000
 recipe = z3c.recipe.usercrontab
 times = @hourly
 command = /usr/sbin/logrotate --state ${buildout:directory}/var/logrotate.status ${logrotate.conf:output} >>${buildout:directory}/var/log/logrotate.log 2>&1
-
 
 [autostart]
 recipe = z3c.recipe.usercrontab
