--- a/profiles/devel.cfg
+++ b/profiles/devel.cfg
@@ -6,3 +6,8 @@ extends =
     versions.cfg
 show-picked-versions = true
 update-versions-file = profiles/versions.cfg
+parts +=
+    nginx.conf
+
+[circus.ini]
+nginx = True
