--- a/profiles/plans.cfg
+++ b/profiles/plans.cfg
@@ -8,3 +8,6 @@ edge_data_bridge_plans = True
 [edge_data_bridge_plans.yaml]
 <= edge_data_bridge_defaults
 resources = plans
+
+[nginx.conf]
+plans = 1
