--- a/profiles/tenders.cfg
+++ b/profiles/tenders.cfg
@@ -8,3 +8,6 @@ edge_data_bridge_tenders = True
 [edge_data_bridge_tenders.yaml]
 <= edge_data_bridge_defaults
 resources = tenders
+
+[nginx.conf]
+tenders = 1
