--- a/profiles/auctions.cfg
+++ b/profiles/auctions.cfg
@@ -8,3 +8,6 @@ edge_data_bridge_auctions = True
 [edge_data_bridge_auctions.yaml]
 <= edge_data_bridge_defaults
 resources = auctions
+
+[nginx.conf]
+auctions = 1
