--- a/profiles/contracts.cfg
+++ b/profiles/contracts.cfg
@@ -9,3 +9,6 @@ edge_data_bridge_contracts = True
 [edge_data_bridge_contracts.yaml]
 <= edge_data_bridge_defaults
 resources = contracts
+
+[nginx.conf]
+contracts = 1
