--- a/profiles/versions.cfg
+++ b/profiles/versions.cfg
@@ -1,6 +1,6 @@
 [versions]
-openprocurement-client = 2.0b6
-openprocurement.edge = 1.0.0dev5
+openprocurement-client = 2.0.0
+openprocurement.edge = 1.0.0dev7
 cornice = 1.2.0.dev0
 funcsigs = 0.4
 
@@ -23,7 +23,7 @@ debtcollector = 1.11.0
 greenlet = 0.4.12
 http-parser = 0.8.3
 monotonic = 1.2
-mr.developer = 1.35
+mr.developer = 1.38
 netaddr = 0.7.19
 netifaces = 0.10.5
 oslo.config = 3.22.0
@@ -45,10 +45,11 @@ translationstring = 1.3
 venusian = 1.0
 wrapt = 1.10.8
 z3c.recipe.usercrontab = 1.4
-zc.buildout = 2.2.5
+zc.buildout = 2.9.5
 zc.recipe.egg = 2.0.3
 zope.deprecation = 4.2.0
 zope.interface = 4.3.3
+setuptools = 36.6.0
 
 # Required by:
 # circus-web==1.0.0
@@ -133,11 +134,6 @@ requests = 2.13.0
 retrying = 1.3.3
 
 # Required by:
-# mr.developer==1.35
-# openprocurement.edge==1.0.0dev4
-setuptools = 7.0
-
-# Required by:
 # cornice==1.2.0.dev0
 # openprocurement-client==2.0b4
 simplejson = 3.10.0
@@ -161,3 +157,7 @@ tornado = 4.4.2
 # Required by:
 # openprocurement.edge==1.0.0dev4
 tzlocal = 1.3
+
+# Added by buildout at 2017-10-31 13:13:45.831179
+sact.recipe.jinjatemplate = 1.3.0
+z3c.recipe.mkdir = 0.6
