--- a/templates/circus.ini
+++ b/templates/circus.ini
@@ -192,3 +192,17 @@ stdout_stream.backup_count = ${options['backup_count']}
 stderr_stream.backup_count = ${options['backup_count']}
 {% end %}
 {% end %}
+
+{% if options['nginx'] %}
+[watcher:nginx]
+cmd = /usr/sbin/nginx
+args = -c ${parts.buildout.directory}/etc/nginx.conf
+stdout_stream.class = FileStream
+stdout_stream.filename = ${parts.buildout.directory}/var/log/nginx.stdout.log
+stdout_stream.max_bytes = 134217728
+stdout_stream.backup_count = 1
+stderr_stream.class = FileStream
+stderr_stream.filename = ${parts.buildout.directory}/var/log/nginx.stderr.log
+stderr_stream.max_bytes = 134217728
+stderr_stream.backup_count = 1
+{% end %}
