Added support couchdb 2.x and monitoring

--- a/profiles/devel.cfg
+++ b/profiles/devel.cfg
@@ -8,6 +8,14 @@ show-picked-versions = true
 update-versions-file = profiles/versions.cfg
 parts +=
     nginx.conf
+    couchdb.sh
 
 [circus.ini]
 nginx = True
+
+[couchdb.sh]
+recipe = sact.recipe.jinjatemplate
+template-file = templates/${:_buildout_section_name_}
+target-file = bin/${:_buildout_section_name_}
+
+target-executable = true
