--- a/templates/circus.ini
+++ b/templates/circus.ini
@@ -14,8 +14,14 @@ statsd = ${options['statsd']}
 
 {% if options['couchdb'] %}
 [watcher:db]
+{% if options['couchdb_ver'] == '1' %}\
 cmd = couchdb
 args = -a ${parts.buildout.directory}/etc/couchdb.ini
+{% end %}\
+{% if options['couchdb_ver'] == '2' %}\
+cmd = ${parts.buildout.directory}/bin/couchdb.sh
+copy_env = true
+{% end %}\
 priority = 100
 stdout_stream.class = FileStream
 stderr_stream.class = FileStream
