--- a/templates/couchdb.ini
+++ b/templates/couchdb.ini
@@ -2,6 +2,7 @@
 database_dir = ${parts.buildout.directory}/var/couchdb
 view_index_dir = ${parts.buildout.directory}/var/couchdb
 uri_file = ${parts.buildout.directory}/var/couch.uri
+delayed_commits = true
 
 [log]
 file = ${parts.buildout.directory}/var/log/couch.log
@@ -9,10 +10,16 @@ file = ${parts.buildout.directory}/var/log/couch.log
 [query_servers]
 python = ${parts.buildout.directory}/bin/couchpy
 
+{% if options['couchdb_ver'] == '1' %}\
 [httpd]
 port = ${options['port']}
 bind_address = ${options['host']}
-
+{% end %}
+{% if options['couchdb_ver'] == '2' %}
+[chttpd]
+port = ${options['port']}
+bind_address = ${options['host']}
+{% end %}
 [compactions]
 _default = [{db_fragmentation, "50%"}, {view_fragmentation, "50%"}, {from, "${options['compaction_start_time']}"}, {to, "${options['compaction_end_time']}"}, {strict_window, true}]
 
@@ -22,8 +29,6 @@ check_interval = 300
 [couch_httpd_oauth]
 use_users_db = true
 
-[couchdb]
-delayed_commits = true
 
 {% if options['username'] %}
 [admins]
