--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -17,6 +17,7 @@ parts =
     openprocurement.edge.ini
     edge_data_bridge
     nginx.conf
+    couchdb.sh
 eggs =
     request_id_middleware
     server_cookie_middleware
@@ -29,6 +30,12 @@ find-links =
 recipe = collective.recipe.template[genshi]:genshi
 input = ${buildout:directory}/templates/${:_buildout_section_name_}
 output = ${buildout:directory}/etc/${:_buildout_section_name_}
+
+[couchdb.sh]
+recipe = sact.recipe.jinjatemplate
+template-file = templates/${:_buildout_section_name_}
+target-file = bin/${:_buildout_section_name_}
+target-executable = true
 
 [mkdirs]
 recipe =  z3c.recipe.mkdir
@@ -99,11 +106,13 @@ edge_host = 0.0.0.0
 endpoint = ipc://${buildout:directory}/var/circus_endpoint
 pubsub_endpoint = ipc://${buildout:directory}/var/circus_pubsub
 timezone = Europe/Kiev
+couchdb_ver = ${couchdb.ini:couchdb_ver}
 
 [couchdb.ini]
 <= config-from-template
 port = 5984
 host = 127.0.0.1
+couchdb_ver = 1
 compaction_start_time = 00:00
 compaction_end_time = 04:00
 username =
