Add to sources contracting.basic and contracting.esco

--- a/profiles/sources.cfg
+++ b/profiles/sources.cfg
@@ -14,6 +14,8 @@ openprocurement.api = git ${remotes:opgh}.api.git pushurl=${remotes:opgh_push}.a
 openprocurement.concord = git ${remotes:opgh}.concord.git pushurl=${remotes:opgh_push}.concord.git
 openprocurement.planning.api = git ${remotes:opgh}.planning.api.git pushurl=${remotes:opgh_push}.planning.api.git branch=${remotes:branch}
 openprocurement.contracting.core = git https://github.com/VDigitall/openprocurement.contracting.core.git branch=contracting-dev
+openprocurement.contracting.basic = git https://github.com/VDigitall/openprocurement.contracting.basic.git branch=contracting-dev
+openprocurement.contracting.esco = git https://github.com/VDigitall/openprocurement.contracting.esco.git branch=contracting-dev
 openprocurement.tender.core = git ${remotes:opgh}.tender.core.git pushurl=${remotes:opgh_push}.tender.core.git branch=${remotes:branch}
 openprocurement.tender.belowthreshold = git ${remotes:opgh}.tender.belowthreshold.git pushurl=${remotes:opgh_push}.tender.belowthreshold.git branch=${remotes:branch}
 openprocurement.tender.limited = git ${remotes:opgh}.tender.limited.git pushurl=${remotes:opgh_push}.tender.limited.git branch=${remotes:branch}
