--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -13,6 +13,8 @@ package-name =
     openprocurement.historical.core
     openprocurement.historical.tender
     openprocurement.contracting.core
+    openprocurement.contracting.basic
+    openprocurement.contracting.esco
     openprocurement.planning.api
     openprocurement.archivarius.core
     openprocurement.archivarius.contracts
