--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -49,7 +49,7 @@ recipe = zc.recipe.egg
 eggs =
     chaussette
     ${buildout:eggs}
-interpreter = python
+interpreter = python_interpreter
 scripts = chaussette
 
 [circus]
